[tool.poetry]
name = "keepass-to-1password"
version = "0.1.0"
description = ""
authors = [
    "Daniel Gasienica <daniel@gasienica.ch>", 
    "Cujoko <cujoko@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "*"
configparser = "*"
jinja2 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
