[tool.poetry]
name = "keepass-to-1password"
version = "0.1.0"
description = ""
authors = [
    "Cujo Koltowski <cujoko@gmail.com>", 
    "Daniel Gasienica <daniel@gasienica.ch>", 
    "Vincent Stark"
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "*"
configparser = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
